# minecraft-server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  registry.json
data/map/: r.0.0.mca
dependencies/: Makefile
include/: BlockState.h  ClientPackets.h  MinecraftHandler.h  Packet.h  PlayerHandler.h  Registry.h  ServerContext.h  ServerPackets.h  utils.h
include/DataTypes/: BitSet.h  Identifier.h  Position.h  nbt.h
include/NBT/: nbt.h
include/client/: Packet.h
src/: CMakeLists.txt  Makefile  MinecraftHandler.cpp  PlayerHandler.cpp  Registry.cpp  ServerPackets.cpp  main.cpp  nbt.cpp  utils.cpp
src/DataTypes/: Identifier.cpp  nbt.cpp
src/client/: Makefile  Packet.cpp
test/: CMakeLists.txt  t_nbt.h  test_main.cpp
